--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a target="_blank" class="button button-sm" href="https://www.ironhack.com/es/cursos/web-development-part-time">Aplicar Ahora</a>
+                        <a target="_blank" class="button button-sm" href="https://www.ironhack.com/es/cursos/web-development-part-time/aplicar">Aplicar Ahora</a>
                     </li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
                             <p>Los martes y jueves de 19:00 a 22:00 y sábados de 10:00 a 17:00</p>                                   
                             <div class="buttons-group">
                                 <a target="_blank" class="button" href="https://s3-eu-west-1.amazonaws.com/ih-web/syllabus/syllabus_webpt.pdf">Descargar Temario</a>
-                                <a target="_blank" class="button" href="https://www.ironhack.com/es/cursos/web-development-part-time">Aplicar Ahora</a>
+                                <a target="_blank" class="button" href="https://www.ironhack.com/es/cursos/web-development-part-time/aplicar">Aplicar Ahora</a>
                             </div>
                             <a class="linki" href="#costos">Saber más <br/><i class="fas fa-angle-down"></i></a>
                             
@@ -82,7 +82,7 @@
             <div class="moreinfo">
                 <div>
                     <i class="fa fa-suitcase" aria-hidden="true"></i>
-                    <h3>Cambio Profesional</h3>
+                    <h3>Cambio <br/>Profesional</h3>
                     <p>¿Quieres hacer un cambio profesional a la industria de la tecnología? El bootcamp de desarrollo web de IronHack está diseñado para ayudarte a consguir el conjunto de habilidades que necesitarás para trabajar como desarrollador junior.</p>
                 </div>
                 <div>
@@ -92,12 +92,12 @@
                 </div>
                 <div>
                     <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                    <h3>Desarrollo Profesional</h3>
+                    <h3>Desarrollo <br/>Profesional</h3>
                     <p>Este curso es la opción perfecta para todos aquellos que buscan complementar sus competencias profesionales, y pivotar hacia un rol más técnico como, por ejemplo, jefe de producto, growth hacker, etc</p>
                 </div>
                 <div>
                     <i class="fa fa-exchange-alt" aria-hidden="true"></i>
-                    <h3>Recién Graduados</h3>
+                    <h3>Recién <br/>Graduados</h3>
                     <p>¿Acabas de terminar la prepa o te has graduado hace poco? Este curso te proporcionará las herramientas fundamentales para orientar tu carrera hacia un área técnica o empezar tu propio negocio.</p>
                 </div>
             </div>
@@ -111,7 +111,7 @@
             </div>
             <div>
                 <h2>Módulo 1</h2>
-                <h3>Desarrollo Web Front-End</h3>
+                <h3>Desarrollo Web <br/>Front-End</h3>
                 <p>
                     Aprende las bases de la programación con JavaScript y el diseño de aplicaciones web dinámicas. Aprenderás a crear una experiencia de usuario atractiva y dinámica usando HTML, CSS y JavaScript. 
                 </p>
@@ -128,7 +128,7 @@
 
             <div>
                 <h2>Módulo 2</h2>
-                <h3>MEAN Stack Back-End</h3>
+                <h3>MEAN Stack <br/>Back-End</h3>
                 <p>
                     Aprende a crear aplicaciones apoyadas en bases de datos no relacionales usando Node.Js, ExpressJS y MongoDB. Estas son algunas de las tecnologías más demandada por las empresas. 
                 </p>
@@ -143,7 +143,7 @@
 
             <div>
                 <h2>Módulo 3</h2>
-                <h3>Microservicios con Angular2</h3>
+                <h3>Microservicios <br/>con Angular2</h3>
                 <p>
                     En este módulo aprenderás a crear tus propias APIs (interfaz de programación de aplicaciones) para hacer un diseño de microservicios. También aprenderás como crear aplicaciones usando Angular2. 
 
@@ -197,7 +197,7 @@
                 <h2>$70,000 + IVA </h2>        
             </div>
             <div>
-                <p>Mensualidades desde $3,700 MXN <br/>(IVA/VAT incluido)</p>
+                <p>Mensualidades desde $2,900 MXN <br/>(IVA/VAT incluido)</p>
                 <p>Cursos impartidos en Español</p>
             </div>
         </section>
