changed to fulltime info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a target="_blank" class="button button-sm" href="https://www.ironhack.com/es/cursos/web-development-part-time/aplicar">Aplicar Ahora</a>
+                        <a target="_blank" class="button button-sm" href="https://www.ironhack.com/es/cursos/web-development-bootcamp/aplicar">Aplicar Ahora</a>
                     </li>
                 </ul>
             </nav>
@@ -31,14 +31,14 @@
         <section id="general">
                 <div class="cover">                           
                         <div>
-                            <p>Web Development Bootcamp Part Time</p>
+                            <p>Web Development Bootcamp Full Time</p>
                             <!-- <p>Cursos de Desarrollo Web para profesionales</p> -->
                             <!-- <p>6 meses - Tiempo Parcial</p> -->
-                            <p>24 julio - 26 enero</p>
-                            <p>Los martes y jueves de 19:00 a 22:00 y sábados de 10:00 a 17:00</p>                                   
+                            <p>20 agosto - 19 octubre</p>
+                            <p>De lunes a viernes de 09:00 a 18:00</p>                                   
                             <div class="buttons-group">
                                 <a target="_blank" class="button" href="https://s3-eu-west-1.amazonaws.com/ih-web/syllabus/syllabus_webpt.pdf">Descargar Temario</a>
-                                <a target="_blank" class="button" href="https://www.ironhack.com/es/cursos/web-development-part-time/aplicar">Aplicar Ahora</a>
+                                <a target="_blank" class="button" href="https://www.ironhack.com/es/cursos/web-development-bootcamp/aplicar">Aplicar Ahora</a>
                             </div>
                             <a class="linki" href="#costos">Saber más <br/><i class="fas fa-angle-down"></i></a>
                             
@@ -157,7 +157,7 @@
             </div>
 
             <div>
-                <h3>¿Quieres conocer más acerca de Ironhack y nuestro Web Development Part-Time antes de inscribirte?</h3>
+                <h3>¿Quieres conocer más acerca de Ironhack y nuestro curso de Web Development Full Time antes de inscribirte?</h3>
                 <a target="_blank" class="button" href="https://s3-eu-west-1.amazonaws.com/ih-web/syllabus/syllabus_webpt.pdf">Descargar Temario</a>
             </div>
         </section>
@@ -189,8 +189,9 @@
 
         <section id="costos">
            <div>
-                <p>24 julio - 26 enero</p>
-                <p>Los martes y jueves de 19:00 a 22:00 <br/>y sábados de 10:00 a 17:00</p>
+                <p>20 agosto - 19 octubre</p>
+                <!-- <p>Los martes y jueves de 19:00 a 22:00 <br/>y sábados de 10:00 a 17:00</p> -->
+                <p>De lunes a viernes de 09:00 a 18:00</p>
            </div>
             <div>
                 <h2>$70,000 + IVA </h2>   
