--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+         <!-- Global site tag (gtag.js) - Google Analytics -->
+         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-42568150-7"></script>
+         <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+ 
+         gtag('config', 'UA-42568150-7');
+         </script>
+ 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
+       
+        <script type="text/javascript">var _kmq = _kmq || [];
+            var _kmk = _kmk || '86dc1b791b4a7c333e56c865f3f9f0fcf9f536d2';
+            function _kms(u){
+            setTimeout(function(){
+                var d = document, f = d.getElementsByTagName('script')[0],
+                s = d.createElement('script');
+                s.type = 'text/javascript'; s.async = true; s.src = u;
+                f.parentNode.insertBefore(s, f);
+            }, 1);
+            }
+            _kms('//i.kissmetrics.com/i.js');
+            _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
+        </script>
+
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
         <link rel="shortcut icon" href="loguini.png" type="image/x-icon">
